report manager updated

--- a/src/test/resources/reports/extentreport_31-12-2025_21-39-22.html
+++ b/src/test/resources/reports/extentreport_31-12-2025_21-39-22.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Functional Testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 31, 2025 08:14:36 pm</span></a>
+<a href="#"><span class="badge badge-primary">Dec 31, 2025 09:39:22 pm</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">D:/Selenium_Learning/LearningFramework</p>
+            <p class="name">verifyRegistrationWithAllMandatoryFields</p>
             <p class="text-sm">
-              <span>8:14:36 pm</span> / <span>00:00:29:605</span>
+              <span>9:39:30 pm</span> / <span>00:00:20:464</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">D:/Selenium_Learning/LearningFramework</h5>
-<span class='badge badge-success'>12.31.2025 8:14:36 pm</span>
-<span class='badge badge-danger'>12.31.2025 8:15:06 pm</span>
-<span class='badge badge-default'>00:00:29:605</span>
+<h5 class="test-status text-fail">verifyRegistrationWithAllMandatoryFields</h5>
+<span class='badge badge-success'>12.31.2025 9:39:30 pm</span>
+<span class='badge badge-danger'>12.31.2025 9:39:51 pm</span>
+<span class='badge badge-default'>00:00:20:464</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,21 +105,21 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:14:45 pm</td>
+        <td>9:39:31 pm</td>
         <td>
-          nullTest Started
+          verifyRegistrationWithAllMandatoryFieldsTest Started
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:15:00 pm</td>
+        <td>9:39:45 pm</td>
         <td>
           verifyRegistrationWithAllMandatoryFields Test Failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:15:06 pm</td>
+        <td>9:39:51 pm</td>
         <td>
           Test finished and flushing the report
         </td>
@@ -143,13 +143,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 31, 2025 08:14:36 pm</h3>
+<h3>Dec 31, 2025 09:39:22 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 31, 2025 08:15:06 pm</h3>
+<h3>Dec 31, 2025 09:39:51 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -219,7 +219,7 @@
 </div></div>
 <script>
 var timeline = {
-"D:/Selenium_Learning/LearningFramework":29.605
+"verifyRegistrationWithAllMandatoryFields":20.464
 };
 </script>
 <div class="row">
